--- a/flow/src/main/resources/static/style/calendar/goals.scss
+++ b/flow/src/main/resources/static/style/calendar/goals.scss
@@ -63,6 +63,8 @@
       white-space: -o-pre-wrap;   /* Opera 7 */
       word-wrap: break-word !important;
       word-break: keep-all !important;
+      overflow: hidden;
+      text-overflow: ellipsis;
       padding: 0 4%;
     }
   }
